# rcg-web

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  wsgi.py
assets/: style.css
rcg_web/: __init__.py  todo.txt
rcg_web/code/: chart_class.py  dashboard.py  formatting.py  formatting_grid.py  grid_class.py  helpers.py
rcg_web/config/: config.py
